updates swagger with all routes
